tests/toy/neg/000970_mutation.toylang
program a = { if a then 0; } .
